Fix margin bug in about us section on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,7 +157,6 @@ padding: 4rem 0 0 0;
     color: var(--text-color);
     margin: 1rem 0 3rem 0;
     border: none;
-    border-radius: 0 0 1rem 1rem;
     font-size: 2.5rem;
     background-color: transparent;
 }
@@ -170,7 +169,7 @@ padding: 4rem 0 0 0;
 #about-us {
     grid-area: about-us;
     display: grid;
-    grid-template-columns: 45rem minmax(46rem, 87rem);
+    grid-template-columns: 60rem minmax(46rem, 87rem);
     place-self: center;
     padding: 4rem 0;
     grid-gap: 4rem;
@@ -322,9 +321,7 @@ footer {
 
     #about-us {
         grid-template-columns: 1fr;
-        padding: 4rem 0 0 0;
         grid-gap: 1rem;
-        width: 80%;
     }
     #about-us h2{
         grid-column: 1/2;
@@ -402,7 +399,6 @@ footer {
         "... about-us ..."
         "footer footer footer";
     }
-
 h1 {
     font-size: 3.5rem;
     padding-top: 3rem;
@@ -438,20 +434,10 @@ header ul {
     text-align: center;
     font-size: 3rem;
 }
-    #gym-class-cards{
-    grid-template-columns: 1fr;
-    grid-gap: 4rem;
-    }
     #gym-class-cards-header {
-    grid-column: 1/2;
-margin-bottom: -2rem;
+    margin-bottom: -2rem;
     }
     .gym-card button{
-        margin: 1rem 0 3rem 0;
-        background-color: var(--primary-color);
-        border: none;
-        border-radius: 0 0 1rem 1rem;
-        color: var(--text-color);
         font-size: 2rem;
     }
 
